# cordon

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cordon.checks.json  install.sh  package-lock.json  package.json
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  cordon-gate.yml  cordon-release.yml  pip-audit.yml  release-please.yml  release.yml
checks/: README.md  catalog.mjs  config-schema.mjs  config.schema.json  example-report.md  registry.mjs  run.mjs  selftest.mjs
checks/lib/: bats-assertions.mjs  built-tree.mjs  capabilities.mjs  config.mjs  discover-scripts.mjs  dispatch-dups.mjs  git.mjs  idempotence.mjs  internal-links.mjs  package-smoke.mjs  pyproject.mjs  repo-files.mjs  repository-policy.mjs  run-process.mjs  shellcheck-repo.sh  structural-html.mjs  version-align.mjs
conformance/: semantics.mjs  validate.mjs
diagrams/: emit-once.mmd
docs/: DIAGRAM-CASE-STUDY.md  EMITTERS.md  IMPLEMENTERS.md  RELEASE.md  REUSABLE-GATE.md
docs/diagrams/: checks-engine-mini.mmd  checks-engine.mmd  effect-ladder.mmd  emit-once.mmd  harness-gate.mmd
emitters/node/: README.md  cli.mjs  index.mjs  package.json  selftest.mjs
emitters/python/: README.md  pyproject.toml  selftest.py
emitters/python/cordon_emit/: __init__.py  __main__.py
fixtures/: README.md
fixtures/invalid/: bad-effect.json  duplicate-command.json  extra-key.json  incoherent-option.json  missing-effect.json
harness/: README.md  gate.mjs  policy.mjs  selftest.mjs
schema/: cordon-checks-v1.json  cordon-checks-v2.json
scripts/: setup-hooks.sh
(+12 files in other folders)
