[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cordon-emit"
version = "0.1.0"
description = "Cordon reference emitter for Python — project an argparse parser to a Cordon v4 command-surface contract."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joe Severino" }]
keywords = ["cordon", "cli", "argparse", "command-surface", "contract"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/joeseverino/cordon"
Schema = "https://jseverino.com/schemas/cordon-v4.json"

[tool.hatch.build.targets.wheel]
packages = ["cordon_emit"]
